--- a/ansible/roles/makinastates_lxc_vars/defaults/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/defaults/main.yml
@@ -11,6 +11,8 @@ lxc_os_release: xenial
 lxc_os_mirror: "http://mirror.ovh.net/ftp.ubuntu.com/"
 lxc_template_options: '-r {lxc_os_release} --mirror "{lxc_os_mirror}"'
 
+lxc_auto_start: '1'
+
 lxc_from_container: null
 lxc_clone_snapshot: null
 
