--- a/ansible/roles/makinastates_lxc_create/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/main.yml
@@ -20,3 +20,4 @@
     lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
     lxc_os_mirror: "{{makinastates_lxc_vars.msg['lxc_os_mirror']}}"
     lxc_os_release: "{{makinastates_lxc_vars.msg['lxc_os_release']}}"
+    lxc_auto_start: "{{makinastates_lxc_vars.msg['lxc_auto_start']}}"
