--- a/ansible/roles/makinastates_lxc_create/templates/lxc.conf
+++ b/ansible/roles/makinastates_lxc_create/templates/lxc.conf
@@ -3,7 +3,7 @@ lxc.rootfs = {{lxc_path}}/{{lxc_container_name}}/rootfs
 lxc.rootfs.backend = dir
 lxc.utsname = {{lxc_container_name}}
 lxc.arch = amd64
-lxc.start.auto = 1
+lxc.start.auto = {{lxc_auto_start}}
 lxc.network.type = veth
 lxc.network.name = eth0
 lxc.network.flags = up
