--- a/ansible/roles/makinastates_lxc_snapshot/tasks/run.yml
+++ b/ansible/roles/makinastates_lxc_snapshot/tasks/run.yml
@@ -1,4 +1,10 @@
 ---
+- name: be sure to have lxc snapshot script
+  template:
+    src: '../../../../files/sbin/makinastates-snapshot.sh'
+    dest: "{{lxc_path}}/{{lxc_container_name}}/rootfs/sbin/makinastates-snapshot.sh"
+    mode: 755
+  tags: makinastates_lxc_create,makinastates_lxc_create_scripts
 - name: snapshot container (copy to img & impersonate)
   saltcall:
     function: mc_cloud_lxc.sync_image_reference_containers
