--- a/ansible/roles/makinastates_lxc_vars/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/tasks/main.yml
@@ -4,6 +4,7 @@
   register: makinastates_lxc_vars
   debug:
     msg:
+      lxc_auto_start: "{{lxc_auto_start}}"
       lxc_path: "{{lxc_path}}"
       lxc_container_name: "{{lxc_container_name}}"
       lxc_os_release: "{{lxc_os_release}}"
