handle volumes by providing a way to edit fstab

--- a/ansible/roles/makinastates_lxc_create/templates/lxc.conf
+++ b/ansible/roles/makinastates_lxc_create/templates/lxc.conf
@@ -1,5 +1,6 @@
 lxc.include = /usr/share/lxc/config/ubuntu.common.conf
 lxc.rootfs = {{lxc_path}}/{{lxc_container_name}}/rootfs
+lxc.mount = {{lxc_path}}/{{lxc_container_name}}/fstab
 lxc.rootfs.backend = dir
 lxc.utsname = {{lxc_container_name}}
 lxc.arch = amd64
