--- a/ansible/roles/makinastates_lxc_create/templates/lxc.conf
+++ b/ansible/roles/makinastates_lxc_create/templates/lxc.conf
@@ -1,7 +1,13 @@
 lxc.include = /usr/share/lxc/config/ubuntu.common.conf
+{% if lxc_backing_store == 'dir' %}
 lxc.rootfs = {{lxc_path}}/{{lxc_container_name}}/rootfs
+{% elif lxc_backing_store == 'overlayfs' %}
+lxc.rootfs = overlayfs:{{makinastates_lxc_clone_lxc_rootfs.stdout}}:{{lxc_path}}/{{lxc_container_name}}/delta0
+{% endif %}
+{% if lxc_backing_store in ['overlayfs', 'dir'] %}
+lxc.rootfs.backend = {{lxc_backing_store}}
+{% endif %}
 lxc.mount = {{lxc_path}}/{{lxc_container_name}}/fstab
-lxc.rootfs.backend = dir
 lxc.utsname = {{lxc_container_name}}
 lxc.arch = amd64
 lxc.start.auto = {{lxc_auto_start}}
