--- a/ansible/roles/makinastates_lxc_create/tasks/lxc.yml
+++ b/ansible/roles/makinastates_lxc_create/tasks/lxc.yml
@@ -7,8 +7,9 @@
 - debug: {msg: {foo: "{{lxc_from_container}}"}}
   tags: makinastates_lxc_create
 - name: lxc create test
-  shell: |
-         lxc-ls --fancy |grep -v ^NAME|awk '{print $1}'|egrep -q "^{{lxc_container_name}}$";echo $?
+  shell: |-
+    lxc-ls -P "{{lxc_path}}" --fancy |grep -v ^NAME|awk '{print $1}'|\
+    egrep -q "^{{lxc_container_name}}$";echo $?
   register: makinastates_lxc_create_lxc_test
   tags: makinastates_lxc_create,makinastates_lxc_create_lxc
 - include: from_template.yml
@@ -62,7 +63,7 @@
   tags: makinastates_lxc_create,makinastates_lxc_create_prereq
 - name: lxc reset force
   shell: |
-    lxc-attach -n {{lxc_container_name}} -- rm -f /etc/lxc_reset_done
+    lxc-attach -P "{{lxc_path}}" -n {{lxc_container_name}} -- rm -f /etc/lxc_reset_done
   tags: makinastates_lxc_create,makinastates_lxc_create_prereq
   when: makinastates_lxc_create_lxc_test['stdout'] == '1'
 - name: lxc prereq
