--- a/ansible/roles/makinastates_lxc_vars/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/tasks/main.yml
@@ -66,3 +66,31 @@
         'network_profile', {}).get(
           'eth1', {}).get(
             'gateway', lxc_eth1_gateway)}}"
+- name: lxc - init - vars - second pass
+  tags: makinastates_lxc_vars
+  register: makinastates_lxc_vars
+  debug:
+    msg:
+      lxc_auto_start: "{{makinastates_lxc_vars.msg['lxc_auto_start']}}"
+      lxc_path: "{{makinastates_lxc_vars.msg['lxc_path']}}"
+      lxc_container_name: "{{makinastates_lxc_vars.msg['lxc_container_name']}}"
+      lxc_os_release: "{{makinastates_lxc_vars.msg['lxc_os_release']}}"
+      lxc_os_mirror: "{{makinastates_lxc_vars.msg['lxc_os_mirror']}}"
+      lxc_pip: "{{makinastates_lxc_vars.msg['lxc_pip']}}"
+      lxc_backing_store: "{{makinastates_lxc_vars.msg['lxc_backing_store']}}"
+      lxc_clone_snapshot: |-
+        {% set bs=makinastates_lxc_vars.msg['lxc_backing_store'] %}
+        {% set bss=makinastates_lxc_vars.msg['lxc_clone_snapshot'] %}
+        {% if bss in [None, 'None', 'none', 'null', ''] and bs not in ['dir', 'lvm']%}{% set bss='true'%}{%endif%}
+        {{bss}}
+      lxc_template: "{{makinastates_lxc_vars.msg['lxc_template']}}"
+      lxc_template_options: "{{makinastates_lxc_vars.msg['lxc_template_options']}}"
+      lxc_from_container: "{{makinastates_lxc_vars.msg['lxc_from_container']}}"
+      lxc_eth0_mac: "{{makinastates_lxc_vars.msg['lxc_eth0_mac']}}"
+      lxc_eth0_bridge: "{{makinastates_lxc_vars.msg['lxc_eth0_bridge']}}"
+      lxc_eth0_ip: "{{makinastates_lxc_vars.msg['lxc_eth0_ip']}}"
+      lxc_eth0_gateway: "{{makinastates_lxc_vars.msg['lxc_eth0_gateway']}}"
+      lxc_eth1_mac: "{{makinastates_lxc_vars.msg['lxc_eth1_mac']}}"
+      lxc_eth1_bridge: "{{makinastates_lxc_vars.msg['lxc_eth1_bridge']}}"
+      lxc_eth1_ip: "{{makinastates_lxc_vars.msg['lxc_eth1_ip']}}"
+      lxc_eth1_gateway: "{{makinastates_lxc_vars.msg['lxc_eth1_gateway']}}"
