begin to use env for ansible for easier projects integration
cc @regilero

Thus, we can put folders for ansible roles in ours projects (the current
                                                             one for ex)
and those will be loaded into the ansible configuration automaticly

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -12,7 +12,7 @@
 # some basic default values...
 
 #inventory      = /etc/ansible/hosts
-library        = library:../library:../../library:../../library:./ansible/library
+#library        = library:../library:../../library:../../library:./ansible/library
 #remote_tmp     = $HOME/.ansible/tmp
 #forks          = 5
 #poll_interval  = 15
@@ -32,10 +32,10 @@ library        = library:../library:../../library:../../library:./ansible/librar
 #gathering = implicit
 
 # additional paths to search for roles in, colon separated
-roles_path    = roles:../roles:../../roles:../../../roles:./ansible/roles
+# roles_path    = roles:../roles:../../roles:../../../roles:./ansible/roles
 
 # uncomment this to disable SSH key host checking
-host_key_checking = False
+#host_key_checking = False
 
 # change the default callback
 #stdout_callback = skippy
@@ -134,7 +134,7 @@ host_key_checking = False
 
 
 # set plugin path directories here, separate with colons
-action_plugins        = action_plugins:../action_plugins:../../action_plugins:../../action_plugins:./ansible/action_plugins
+# action_plugins        = action_plugins:../action_plugins:../../action_plugins:../../action_plugins:./ansible/action_plugins
 #callback_plugins   = /usr/share/ansible/plugins/callback
 #connection_plugins = /usr/share/ansible/plugins/connection
 #lookup_plugins     = /usr/share/ansible/plugins/lookup
@@ -151,7 +151,7 @@ action_plugins        = action_plugins:../action_plugins:../../action_plugins:..
 
 # don't like cows?  that's unfortunate.
 # set to 1 if you don't want cowsay support or export ANSIBLE_NOCOWS=1
-nocows = 1
+# nocows = 1
 
 # set which cowsay stencil you'd like to use by default. When set to 'random',
 # a random stencil will be selected for each task. The selection will be filtered
