Redis: allow empty password for this service

--- a/files/etc/redis/redis.conf
+++ b/files/etc/redis/redis.conf
@@ -60,11 +60,15 @@
 {{config('bind') }}
 
 # MASTER Password if any
+{% if redis.get('requirepass','') !=  '' %}
 {{config('requirepass') }}
+{% endif %}
 
 # replication if any
 {{config('slaveof') }}
+{% if redis.get('masterauth','') !=  '' %}
 {{config('masterauth')}}
+{% endif %}
 
 # Specify the path for the unix socket that will be used to listen for
 # incoming connections. There is no default, so Redis will not listen
