--- a/files/etc/nginx/fastcgi_fpm_symfony.conf
+++ b/files/etc/nginx/fastcgi_fpm_symfony.conf
@@ -1,7 +1,8 @@
 #-*- mode: nginx; mode: flyspell-prog; ispell-local-dictionary: "american" -*-
 ### Not Chrooted fastcgi configuration.
 include fastcgi_fpm_drupal_params.conf;
-fastcgi_buffers 256 4k;
+fastcgi_buffers 256 8k;
+fastcgi_buffer_size 8k;
 fastcgi_intercept_errors on;
 ## allow 4 hrs - pass timeout responsibility to upstream.
 fastcgi_read_timeout 14400;
