Haproxy packaging refactor includ. circus managmt

--- a/files/etc/haproxy/haproxy.cfg
+++ b/files/etc/haproxy/haproxy.cfg
@@ -19,15 +19,15 @@ global
     {% if config.global.nbproc %}
     nbproc {{config.global.nbproc}}
     {% endif %}
-    {% if config.default.stats.enabled %}
+    {% if data.stats_enabled %}
     stats socket {{config.global.stats_sock}} level {{config.global.stats_sock_lvl}}
     {% endif %}
     node {{config.global.node}}
     tune.ssl.default-dh-param 2048
-    ssl-default-bind-options no-sslv3 no-tls-tickets
-    ssl-default-bind-ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
-    ssl-default-server-options no-sslv3 no-tls-tickets
-    ssl-default-server-ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA
+    ssl-default-bind-options {{data.ssl.bind_options}}
+    ssl-default-bind-ciphers {{data.ssl.bind_ciphers}}
+    ssl-default-server-options {{data.ssl.server_bind_options}}
+    ssl-default-server-ciphers {{data.ssl.server_bind_ciphers}}
 
 defaults
     log  {{config.default.log}}
@@ -43,11 +43,3 @@ defaults
     timeout queue   {{config.default.timeout.queue}}
     timeout client  {{config.default.timeout.client}}
     timeout server  {{config.default.timeout.server}}
-
-    {% if config.default.stats.enabled %}
-    stats enable
-    stats uri     {{config.default.stats.uri}}
-    stats refresh {{config.default.stats.refresh}}
-    stats realm   {{config.default.stats.realm}}
-    stats auth    {{config.default.stats.auth}}
-    {% endif %}
