more scratch mode

--- a/ansible/roles/makinastates_setup/tasks/main.yml
+++ b/ansible/roles/makinastates_setup/tasks/main.yml
@@ -5,6 +5,9 @@
     - python
     - git
     - curl
+    - locales
+    - language-pack-fr
+    - language-pack-en
   tags: [makinastates, makinastates_setup]
 
 - name: test ms dir
