nginx rec realip

--- a/files/etc/nginx/nginx.conf
+++ b/files/etc/nginx/nginx.conf
@@ -29,7 +29,7 @@ http {
     {% for logformat, value in data.logformats.items() %}
     log_format {{logformat}} '{{value}}';
     {% endfor %}
-    # real_ip_recursive on;
+    real_ip_recursive {{data.real_ip_recursive}};
 
     # Sendfile copies data between one FD and other from within the kernel.
     # More efficient than read() + write(), since the requires transferring data to and from the user space.
