--- a/ansible/plays/cloud/create_container.yml
+++ b/ansible/plays/cloud/create_container.yml
@@ -19,6 +19,7 @@
   roles:
     - role: makinastates
       makinastates_nodetype: lxccontainer
+      makinastates_version: "{{makinastates_lxc_vars.msg['makinastates_version']}}"
       when: "lxc_makinastates_presence.stdout != '0'"
 
 - hosts: "{{lxc_container_name}}"
@@ -35,5 +36,6 @@
         set -ex
         cd /srv/makina-states/
         git reset --hard HEAD
-        /srv/makina-states/bin/boot-salt.sh -C --reconfigure -m {{lxc_container_name}} -n lxccontainer
+        /srv/makina-states/bin/boot-salt.sh -C --reconfigure -m {{lxc_container_name}} \
+            -n lxccontainer -b {{makinastates_lxc_vars.msg['makinastates_version']}}
       when: "lxc_makinastates_reconfigured.stdout != '0'"
