--- a/ansible/roles/makinastates_lxc_vars/tasks/main.yml
+++ b/ansible/roles/makinastates_lxc_vars/tasks/main.yml
@@ -68,7 +68,7 @@
             'gateway', lxc_eth1_gateway)}}"
       makinastates_version: "{{
         salt_pillar.get('makina-states.cloud.vms.vms', {}).get(lxc_container_name, {}).get(
-            'bootsalt_branch', makinastates_version)"
+            'bootsalt_branch', makinastates_version)}}"
 - name: lxc - init - vars - second pass
   tags: makinastates_lxc_vars
   register: makinastates_lxc_vars
