--- a/ansible/roles/makinastates_presence/tasks/main.yml
+++ b/ansible/roles/makinastates_presence/tasks/main.yml
@@ -6,3 +6,12 @@
   name: "test makinastates presence"
   register: makinastates_presence
   tags: makinastates,makinastates_presence
+- shell: |
+     {%if makinastates_presence.stdout == '0'%}
+     test -e "{{makinastates_dest}}/var/.first_highstate"
+     echo ${?}
+     {%else %}echo 0{% endif %}
+  name: "test makinastates presence"
+  register: makinastates_presence
+  when: "makinastates_test_first_highstate"
+  tags: makinastates,makinastates_presence
