--- a/ansible/plays/cloud/create_container.yml
+++ b/ansible/plays/cloud/create_container.yml
@@ -20,10 +20,12 @@
   roles:
     - role: makinastates_lxc_vars
     - role: makinastates_presence
+      makinastates_test_first_highstate: true
     - role: makinastates
       makinastates_nodetype: lxccontainer
       when: "makinastates_presence.stdout != '0'"
     - role: makinastates_presence
+      makinastates_test_first_highstate: true
       allow_duplicates: true
     - role: makinastates_reconfigure
       makinastates_minion_id: "{{lookup('env', 'ANSIBLE_TARGETS').split(',')[1]}}"
