fix nginx set_real_ip_from syntax

--- a/files/etc/nginx/sites-available/vhost.conf
+++ b/files/etc/nginx/sites-available/vhost.conf
@@ -34,7 +34,9 @@ server {
     # feed the map variables for ssl up
     set $http_x_ssl $http_x_ssl_resolved;
     {% if data.data.use_real_ip and  data.reverse_proxy_addresses %}
-    set_real_ip_from  {% for addr in data.reverse_proxy_addresses %} {{addr}}{%endfor%};
+    {% for addr in data.reverse_proxy_addresses %}
+    set_real_ip_from {{addr}};
+    {% endfor %}
     real_ip_header {{data.real_ip_header}};
     {% endif %}
     # Member features should be over ssl
