haproxy+rsyslog stuff

--- a/files/etc/rsyslog.conf
+++ b/files/etc/rsyslog.conf
@@ -64,3 +64,5 @@ $WorkDirectory {{data.spool}}
 #
 $IncludeConfig /etc/rsyslog.d/*.conf
 
+*.*;cron,mail,auth,authpriv.none -/var/log/syslog
+cron.* /var/log/cron.log
